# C_StateMachineWithThreads

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake_clang.yml  cmake_ubuntu.yml  cmake_windows.yml
Allocator/: fb_allocator.h  x_allocator.h
Callback/: CMakeLists.txt
Port/: CMakeLists.txt  Fault.h  Timer.c  Timer.h  WorkerThreadStd.cpp  WorkerThreadStd.h
SelfTest/: CMakeLists.txt  CentrifugeTest.c  CentrifugeTest.h  PressureTest.c  PressureTest.h  SelfTestEngine.c  SelfTestEngine.h
StateMachine/: CMakeLists.txt  StateMachine.h
VS2017/: VS2017.sln
VS2017/VS2017/: VS2017.vcxproj  VS2017.vcxproj.filters
